--- a/lib/i18n/messages/de.json
+++ b/lib/i18n/messages/de.json
@@ -5,6 +5,117 @@
     "myQuiz": "Mein Quiz",
     "settings": "Einstellungen"
   },
+  "common": {
+    "loading": "Laden...",
+    "error": "Fehler",
+    "save": "Speichern",
+    "delete": "Löschen",
+    "cancel": "Abbrechen",
+    "none": "Keine",
+    "search": "Suchen",
+    "clear": "Löschen",
+    "book": "Buch",
+    "chapter": "Kapitel",
+    "question": "Frage",
+    "questions": "Fragen",
+    "correct": "Richtig",
+    "wrong": "Falsch"
+  },
+  "bookReader": {
+    "download": "Herunterladen",
+    "selectProfile": "Profil auswählen",
+    "profiles": "Profile",
+    "enableAllBooks": "Alle Bücher für den Download aktivieren",
+    "generateToc": "Inhaltsverzeichnisseiten generieren",
+    "exportQuiz": "Quiz exportieren",
+    "exportMyQuiz": "Mein Quiz exportieren",
+    "enableAndOrder": "Aktivieren & Sortieren",
+    "unknownBook": "(Unbekanntes Buch)",
+    "noTocAvailable": "Kein Inhaltsverzeichnis verfügbar",
+    "noBooks": {
+      "title": "Keine Bücher vorhanden",
+      "description": "Dieses Profil hat noch keine heruntergeladenen Bücher/Ressourcen."
+    },
+    "loadError": "Inhalt konnte nicht geladen werden"
+  },
+  "quiz": {
+    "title": "Beook Quiz",
+    "description": "Die Fragen sind nach Buch und Kapitel gruppiert. Beantworte sie und zeige dann die Lösungen an, um zu sehen, was du richtig hattest.",
+    "status": {
+      "idle": "Bereit",
+      "decrypting": "Fragen und Antworten werden entschlüsselt...",
+      "decrypted": "Entschlüsselt A: {{answerDecrypted}}/{{answerTotal}} | F: {{questionDecrypted}}/{{questionTotal}}",
+      "decryptFailed": "Entschlüsselung fehlgeschlagen",
+      "decryptError": "Entschlüsselungsfehler"
+    },
+    "decryptAgain": "erneut entschlüsseln",
+    "showSolution": "Lösung anzeigen",
+    "hideSolution": "Lösung ausblenden",
+    "loadingQuiz": "Quiz-Daten werden geladen...",
+    "noContent": "Kein Quiz-Inhalt gefunden. Bitte überprüfen Sie, ob Beook installiert ist und die entschlüsselte Datenbank Fragen- und Antwortdaten enthält. Stellen Sie sicher, dass die Beook-Anwendung gestoppt ist.",
+    "noQuestions": "Keine Fragen für dieses Buch gefunden.",
+    "product": "Produkt",
+    "ref": "Ref",
+    "questionTextUnavailable": "(Fragetext nicht verfügbar)",
+    "noAnswerChoices": "Keine Antwortmöglichkeiten gefunden.",
+    "feedback": {
+      "correct": "Richtig!",
+      "correctNotSelected": "Richtig (nicht ausgewählt)",
+      "wrong": "Falsch!"
+    },
+    "materialRelevant": "Dieses Material ist relevant für Frage {{questions}}."
+  },
+  "myQuiz": {
+    "title": "Mein Quiz"
+  },
+  "addQuizForm": {
+    "title": "Eigenes Quiz hinzufügen",
+    "assign": "Zuordnung",
+    "bookLabel": "Buch",
+    "chapterLabel": "Kapitel",
+    "loadingBooks": "Bücher werden geladen...",
+    "selectBook": "Buch auswählen (optional)",
+    "selectBookFirst": "Zuerst ein Buch auswählen",
+    "loadingChapters": "Kapitel werden geladen...",
+    "selectChapter": "Kapitel auswählen (optional)",
+    "assignHint": "Die Zuweisung eines Buches ist optional. Bei \"Keine\" wird die Frage nicht verknüpft.",
+    "questionLabel": "Frage",
+    "correctAnswerLabel": "Richtige Antwort",
+    "wrongAnswersLabel": "Falsche Antworten",
+    "wrongAnswersHint": "Mindestens 3 falsche Antworten erforderlich, maximal 30.",
+    "wrongAnswerPlaceholder": "Falsche Antwort {{number}}",
+    "addWrongAnswer": "Weitere falsche Antwort hinzufügen",
+    "imageLabel": "Bild",
+    "imageHint": "Klicken Sie, um ein Bild auszuwählen (optional)",
+    "selectedFile": "Ausgewählt",
+    "saving": "Speichern...",
+    "saveQuestion": "Frage speichern",
+    "success": "Frage erfolgreich hinzugefügt!",
+    "errorPrefix": "Fehler",
+    "unexpectedError": "Unerwarteter Fehler beim Speichern der Frage.",
+    "minWrongAnswers": "Bitte geben Sie mindestens 3 falsche Antworten an.",
+    "maxWrongAnswers": "Zu viele falsche Antworten (max. 30).",
+    "couldNotLoadBooks": "Bücher konnten nicht geladen werden.",
+    "couldNotLoadChapters": "Kapitel konnten nicht geladen werden.",
+    "onlyImages": "Nur Bilddateien werden derzeit unterstützt."
+  },
+  "questionsPanel": {
+    "search": "Suche",
+    "filterPlaceholder": "Nach Text filtern…",
+    "allBooks": "Alle Bücher",
+    "bookNone": "Buch: Keine",
+    "allChapters": "Alle Kapitel",
+    "chapterNone": "Kapitel: Keine",
+    "newestFirst": "Neueste zuerst",
+    "oldestFirst": "Älteste zuerst",
+    "noQuestionsYet": "Noch keine Fragen. Fügen Sie Ihre erste links hinzu.",
+    "noResults": "Keine Ergebnisse für Ihren Filter.",
+    "deleteButton": "Löschen",
+    "deleteTitle": "Diese Frage löschen?",
+    "deleteWarning": "Diese Aktion kann nicht rückgängig gemacht werden.",
+    "questionRemoved": "Frage entfernt",
+    "couldNotDelete": "Frage konnte nicht gelöscht werden"
+  },
   "settings": {
     "theme": "Design",
     "language": "Sprache",
