--- a/lib/i18n/messages/en.json
+++ b/lib/i18n/messages/en.json
@@ -5,6 +5,117 @@
     "myQuiz": "My Quiz",
     "settings": "Settings"
   },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "save": "Save",
+    "delete": "Delete",
+    "cancel": "Cancel",
+    "none": "None",
+    "search": "Search",
+    "clear": "Clear",
+    "book": "Book",
+    "chapter": "Chapter",
+    "question": "Question",
+    "questions": "Questions",
+    "correct": "Correct",
+    "wrong": "Wrong"
+  },
+  "bookReader": {
+    "download": "Download",
+    "selectProfile": "Select a Profile",
+    "profiles": "Profiles",
+    "enableAllBooks": "Enable all books for download",
+    "generateToc": "Generate table of contents pages",
+    "exportQuiz": "Export quiz",
+    "exportMyQuiz": "Export my quiz",
+    "enableAndOrder": "Enable & Order",
+    "unknownBook": "(Unknown book)",
+    "noTocAvailable": "No TOC available",
+    "noBooks": {
+      "title": "There are no books",
+      "description": "This profile has no downloaded books/resources yet."
+    },
+    "loadError": "Failed to load content"
+  },
+  "quiz": {
+    "title": "Beook Quiz",
+    "description": "Questions are grouped by book and chapter. Answer them and then reveal the solutions to see what you got right.",
+    "status": {
+      "idle": "Idle",
+      "decrypting": "Decrypting questions and answers...",
+      "decrypted": "Decrypted A: {{answerDecrypted}}/{{answerTotal}} | Q: {{questionDecrypted}}/{{questionTotal}}",
+      "decryptFailed": "Decrypt failed",
+      "decryptError": "Decrypt error"
+    },
+    "decryptAgain": "decrypt again",
+    "showSolution": "show solution",
+    "hideSolution": "hide solution",
+    "loadingQuiz": "loading quiz data...",
+    "noContent": "No quiz content detected. Please verify that Beook is installed and the decrypted database contains question and answer data. Make sure to stop the Beook Application.",
+    "noQuestions": "No questions found for this book.",
+    "product": "Product",
+    "ref": "Ref",
+    "questionTextUnavailable": "(Question text not available)",
+    "noAnswerChoices": "No answer choices found.",
+    "feedback": {
+      "correct": "Correct!",
+      "correctNotSelected": "Correct (not selected)",
+      "wrong": "Wrong!"
+    },
+    "materialRelevant": "This Material is relevant for Question {{questions}}."
+  },
+  "myQuiz": {
+    "title": "My Quiz"
+  },
+  "addQuizForm": {
+    "title": "Add custom quiz",
+    "assign": "Assign",
+    "bookLabel": "Book",
+    "chapterLabel": "Chapter",
+    "loadingBooks": "Loading books...",
+    "selectBook": "Select a book (optional)",
+    "selectBookFirst": "Select a book first",
+    "loadingChapters": "Loading chapters...",
+    "selectChapter": "Select a chapter (optional)",
+    "assignHint": "Assigning a book is optional. If you choose \"None\", the question will not be linked.",
+    "questionLabel": "Question",
+    "correctAnswerLabel": "Correct answer",
+    "wrongAnswersLabel": "Wrong answers",
+    "wrongAnswersHint": "At least 3 wrong answers are required, up to 30.",
+    "wrongAnswerPlaceholder": "Wrong answer {{number}}",
+    "addWrongAnswer": "Add additional wrong answer",
+    "imageLabel": "Image",
+    "imageHint": "Click to choose an image (optional)",
+    "selectedFile": "Selected",
+    "saving": "Saving...",
+    "saveQuestion": "Save Question",
+    "success": "Question added successfully!",
+    "errorPrefix": "Error",
+    "unexpectedError": "Unexpected error while saving the question.",
+    "minWrongAnswers": "Please provide at least 3 wrong answers.",
+    "maxWrongAnswers": "Too many wrong answers (max 30).",
+    "couldNotLoadBooks": "Could not load books.",
+    "couldNotLoadChapters": "Could not load chapters.",
+    "onlyImages": "Only image files are supported at the moment."
+  },
+  "questionsPanel": {
+    "search": "Search",
+    "filterPlaceholder": "Filter by text…",
+    "allBooks": "All books",
+    "bookNone": "Book: None",
+    "allChapters": "All chapters",
+    "chapterNone": "Chapter: None",
+    "newestFirst": "Newest first",
+    "oldestFirst": "Oldest first",
+    "noQuestionsYet": "No questions yet. Add your first one on the left.",
+    "noResults": "No results for your filter.",
+    "deleteButton": "Delete",
+    "deleteTitle": "Delete this question?",
+    "deleteWarning": "This action cannot be undone.",
+    "questionRemoved": "Question removed",
+    "couldNotDelete": "Could not delete question"
+  },
   "settings": {
     "theme": "Theme",
     "language": "Language",
