--- a/lib/i18n/messages/es.json
+++ b/lib/i18n/messages/es.json
@@ -5,6 +5,117 @@
     "myQuiz": "Mi cuestionario",
     "settings": "Configuración"
   },
+  "common": {
+    "loading": "Cargando...",
+    "error": "Error",
+    "save": "Guardar",
+    "delete": "Eliminar",
+    "cancel": "Cancelar",
+    "none": "Ninguno",
+    "search": "Buscar",
+    "clear": "Limpiar",
+    "book": "Libro",
+    "chapter": "Capítulo",
+    "question": "Pregunta",
+    "questions": "Preguntas",
+    "correct": "Correcto",
+    "wrong": "Incorrecto"
+  },
+  "bookReader": {
+    "download": "Descargar",
+    "selectProfile": "Seleccionar un perfil",
+    "profiles": "Perfiles",
+    "enableAllBooks": "Habilitar todos los libros para descargar",
+    "generateToc": "Generar páginas de tabla de contenidos",
+    "exportQuiz": "Exportar quiz",
+    "exportMyQuiz": "Exportar mi quiz",
+    "enableAndOrder": "Habilitar & Ordenar",
+    "unknownBook": "(Libro desconocido)",
+    "noTocAvailable": "No hay tabla de contenidos disponible",
+    "noBooks": {
+      "title": "No hay libros",
+      "description": "Este perfil aún no tiene libros/recursos descargados."
+    },
+    "loadError": "Error al cargar el contenido"
+  },
+  "quiz": {
+    "title": "Quiz Beook",
+    "description": "Las preguntas están agrupadas por libro y capítulo. Respóndelas y luego revela las soluciones para ver qué acertaste.",
+    "status": {
+      "idle": "Listo",
+      "decrypting": "Descifrando preguntas y respuestas...",
+      "decrypted": "Descifrado R: {{answerDecrypted}}/{{answerTotal}} | P: {{questionDecrypted}}/{{questionTotal}}",
+      "decryptFailed": "Descifrado fallido",
+      "decryptError": "Error de descifrado"
+    },
+    "decryptAgain": "descifrar de nuevo",
+    "showSolution": "mostrar solución",
+    "hideSolution": "ocultar solución",
+    "loadingQuiz": "cargando datos del quiz...",
+    "noContent": "No se detectó contenido de quiz. Verifica que Beook esté instalado y que la base de datos descifrada contenga datos de preguntas y respuestas. Asegúrate de detener la aplicación Beook.",
+    "noQuestions": "No se encontraron preguntas para este libro.",
+    "product": "Producto",
+    "ref": "Ref",
+    "questionTextUnavailable": "(Texto de pregunta no disponible)",
+    "noAnswerChoices": "No se encontraron opciones de respuesta.",
+    "feedback": {
+      "correct": "¡Correcto!",
+      "correctNotSelected": "Correcto (no seleccionado)",
+      "wrong": "¡Incorrecto!"
+    },
+    "materialRelevant": "Este material es relevante para la pregunta {{questions}}."
+  },
+  "myQuiz": {
+    "title": "Mi Quiz"
+  },
+  "addQuizForm": {
+    "title": "Agregar quiz personalizado",
+    "assign": "Asignación",
+    "bookLabel": "Libro",
+    "chapterLabel": "Capítulo",
+    "loadingBooks": "Cargando libros...",
+    "selectBook": "Seleccionar un libro (opcional)",
+    "selectBookFirst": "Selecciona primero un libro",
+    "loadingChapters": "Cargando capítulos...",
+    "selectChapter": "Seleccionar un capítulo (opcional)",
+    "assignHint": "Asignar un libro es opcional. Si eliges \"Ninguno\", la pregunta no estará vinculada.",
+    "questionLabel": "Pregunta",
+    "correctAnswerLabel": "Respuesta correcta",
+    "wrongAnswersLabel": "Respuestas incorrectas",
+    "wrongAnswersHint": "Se requieren al menos 3 respuestas incorrectas, hasta 30.",
+    "wrongAnswerPlaceholder": "Respuesta incorrecta {{number}}",
+    "addWrongAnswer": "Agregar respuesta incorrecta adicional",
+    "imageLabel": "Imagen",
+    "imageHint": "Haz clic para elegir una imagen (opcional)",
+    "selectedFile": "Seleccionado",
+    "saving": "Guardando...",
+    "saveQuestion": "Guardar pregunta",
+    "success": "¡Pregunta agregada exitosamente!",
+    "errorPrefix": "Error",
+    "unexpectedError": "Error inesperado al guardar la pregunta.",
+    "minWrongAnswers": "Proporciona al menos 3 respuestas incorrectas.",
+    "maxWrongAnswers": "Demasiadas respuestas incorrectas (máx. 30).",
+    "couldNotLoadBooks": "No se pudieron cargar los libros.",
+    "couldNotLoadChapters": "No se pudieron cargar los capítulos.",
+    "onlyImages": "Por el momento solo se admiten archivos de imagen."
+  },
+  "questionsPanel": {
+    "search": "Buscar",
+    "filterPlaceholder": "Filtrar por texto…",
+    "allBooks": "Todos los libros",
+    "bookNone": "Libro: Ninguno",
+    "allChapters": "Todos los capítulos",
+    "chapterNone": "Capítulo: Ninguno",
+    "newestFirst": "Más recientes primero",
+    "oldestFirst": "Más antiguos primero",
+    "noQuestionsYet": "Aún no hay preguntas. Agrega la primera a la izquierda.",
+    "noResults": "Sin resultados para tu filtro.",
+    "deleteButton": "Eliminar",
+    "deleteTitle": "¿Eliminar esta pregunta?",
+    "deleteWarning": "Esta acción no se puede deshacer.",
+    "questionRemoved": "Pregunta eliminada",
+    "couldNotDelete": "No se pudo eliminar la pregunta"
+  },
   "settings": {
     "theme": "Tema",
     "language": "Idioma",
