--- a/lib/i18n/messages/fr.json
+++ b/lib/i18n/messages/fr.json
@@ -5,6 +5,117 @@
     "myQuiz": "Mon quiz",
     "settings": "Paramètres"
   },
+  "common": {
+    "loading": "Chargement...",
+    "error": "Erreur",
+    "save": "Enregistrer",
+    "delete": "Supprimer",
+    "cancel": "Annuler",
+    "none": "Aucun",
+    "search": "Rechercher",
+    "clear": "Effacer",
+    "book": "Livre",
+    "chapter": "Chapitre",
+    "question": "Question",
+    "questions": "Questions",
+    "correct": "Correct",
+    "wrong": "Incorrect"
+  },
+  "bookReader": {
+    "download": "Télécharger",
+    "selectProfile": "Sélectionner un profil",
+    "profiles": "Profils",
+    "enableAllBooks": "Activer tous les livres pour le téléchargement",
+    "generateToc": "Générer les pages de table des matières",
+    "exportQuiz": "Exporter le quiz",
+    "exportMyQuiz": "Exporter mon quiz",
+    "enableAndOrder": "Activer & Ordonner",
+    "unknownBook": "(Livre inconnu)",
+    "noTocAvailable": "Aucune table des matières disponible",
+    "noBooks": {
+      "title": "Aucun livre",
+      "description": "Ce profil n'a pas encore de livres/ressources téléchargés."
+    },
+    "loadError": "Échec du chargement du contenu"
+  },
+  "quiz": {
+    "title": "Quiz Beook",
+    "description": "Les questions sont groupées par livre et chapitre. Répondez-y puis révélez les solutions pour voir vos bonnes réponses.",
+    "status": {
+      "idle": "Prêt",
+      "decrypting": "Déchiffrement des questions et réponses...",
+      "decrypted": "Déchiffré R: {{answerDecrypted}}/{{answerTotal}} | Q: {{questionDecrypted}}/{{questionTotal}}",
+      "decryptFailed": "Échec du déchiffrement",
+      "decryptError": "Erreur de déchiffrement"
+    },
+    "decryptAgain": "déchiffrer à nouveau",
+    "showSolution": "afficher la solution",
+    "hideSolution": "masquer la solution",
+    "loadingQuiz": "chargement des données du quiz...",
+    "noContent": "Aucun contenu de quiz détecté. Veuillez vérifier que Beook est installé et que la base de données déchiffrée contient des données de questions et réponses. Assurez-vous d'arrêter l'application Beook.",
+    "noQuestions": "Aucune question trouvée pour ce livre.",
+    "product": "Produit",
+    "ref": "Réf",
+    "questionTextUnavailable": "(Texte de la question non disponible)",
+    "noAnswerChoices": "Aucun choix de réponse trouvé.",
+    "feedback": {
+      "correct": "Correct !",
+      "correctNotSelected": "Correct (non sélectionné)",
+      "wrong": "Incorrect !"
+    },
+    "materialRelevant": "Ce matériel est pertinent pour la question {{questions}}."
+  },
+  "myQuiz": {
+    "title": "Mon Quiz"
+  },
+  "addQuizForm": {
+    "title": "Ajouter un quiz personnalisé",
+    "assign": "Attribution",
+    "bookLabel": "Livre",
+    "chapterLabel": "Chapitre",
+    "loadingBooks": "Chargement des livres...",
+    "selectBook": "Sélectionner un livre (optionnel)",
+    "selectBookFirst": "Sélectionner d'abord un livre",
+    "loadingChapters": "Chargement des chapitres...",
+    "selectChapter": "Sélectionner un chapitre (optionnel)",
+    "assignHint": "L'attribution d'un livre est optionnelle. Si vous choisissez \"Aucun\", la question ne sera pas liée.",
+    "questionLabel": "Question",
+    "correctAnswerLabel": "Bonne réponse",
+    "wrongAnswersLabel": "Mauvaises réponses",
+    "wrongAnswersHint": "Au moins 3 mauvaises réponses sont requises, jusqu'à 30.",
+    "wrongAnswerPlaceholder": "Mauvaise réponse {{number}}",
+    "addWrongAnswer": "Ajouter une mauvaise réponse supplémentaire",
+    "imageLabel": "Image",
+    "imageHint": "Cliquez pour choisir une image (optionnel)",
+    "selectedFile": "Sélectionné",
+    "saving": "Enregistrement...",
+    "saveQuestion": "Enregistrer la question",
+    "success": "Question ajoutée avec succès !",
+    "errorPrefix": "Erreur",
+    "unexpectedError": "Erreur inattendue lors de l'enregistrement de la question.",
+    "minWrongAnswers": "Veuillez fournir au moins 3 mauvaises réponses.",
+    "maxWrongAnswers": "Trop de mauvaises réponses (max 30).",
+    "couldNotLoadBooks": "Impossible de charger les livres.",
+    "couldNotLoadChapters": "Impossible de charger les chapitres.",
+    "onlyImages": "Seuls les fichiers image sont pris en charge pour le moment."
+  },
+  "questionsPanel": {
+    "search": "Recherche",
+    "filterPlaceholder": "Filtrer par texte…",
+    "allBooks": "Tous les livres",
+    "bookNone": "Livre : Aucun",
+    "allChapters": "Tous les chapitres",
+    "chapterNone": "Chapitre : Aucun",
+    "newestFirst": "Plus récents d'abord",
+    "oldestFirst": "Plus anciens d'abord",
+    "noQuestionsYet": "Pas encore de questions. Ajoutez la première à gauche.",
+    "noResults": "Aucun résultat pour votre filtre.",
+    "deleteButton": "Supprimer",
+    "deleteTitle": "Supprimer cette question ?",
+    "deleteWarning": "Cette action ne peut pas être annulée.",
+    "questionRemoved": "Question supprimée",
+    "couldNotDelete": "Impossible de supprimer la question"
+  },
   "settings": {
     "theme": "Thème",
     "language": "Langue",
