--- a/lib/i18n/messages/it.json
+++ b/lib/i18n/messages/it.json
@@ -5,6 +5,117 @@
     "myQuiz": "Il mio quiz",
     "settings": "Impostazioni"
   },
+  "common": {
+    "loading": "Caricamento...",
+    "error": "Errore",
+    "save": "Salva",
+    "delete": "Elimina",
+    "cancel": "Annulla",
+    "none": "Nessuno",
+    "search": "Cerca",
+    "clear": "Cancella",
+    "book": "Libro",
+    "chapter": "Capitolo",
+    "question": "Domanda",
+    "questions": "Domande",
+    "correct": "Corretto",
+    "wrong": "Sbagliato"
+  },
+  "bookReader": {
+    "download": "Scarica",
+    "selectProfile": "Seleziona un profilo",
+    "profiles": "Profili",
+    "enableAllBooks": "Abilita tutti i libri per il download",
+    "generateToc": "Genera pagine dell'indice",
+    "exportQuiz": "Esporta quiz",
+    "exportMyQuiz": "Esporta il mio quiz",
+    "enableAndOrder": "Abilita & Ordina",
+    "unknownBook": "(Libro sconosciuto)",
+    "noTocAvailable": "Nessun indice disponibile",
+    "noBooks": {
+      "title": "Nessun libro",
+      "description": "Questo profilo non ha ancora libri/risorse scaricati."
+    },
+    "loadError": "Impossibile caricare il contenuto"
+  },
+  "quiz": {
+    "title": "Quiz Beook",
+    "description": "Le domande sono raggruppate per libro e capitolo. Rispondi e poi rivela le soluzioni per vedere cosa hai indovinato.",
+    "status": {
+      "idle": "Pronto",
+      "decrypting": "Decrittazione domande e risposte...",
+      "decrypted": "Decrittato R: {{answerDecrypted}}/{{answerTotal}} | D: {{questionDecrypted}}/{{questionTotal}}",
+      "decryptFailed": "Decrittazione fallita",
+      "decryptError": "Errore di decrittazione"
+    },
+    "decryptAgain": "decritta di nuovo",
+    "showSolution": "mostra soluzione",
+    "hideSolution": "nascondi soluzione",
+    "loadingQuiz": "caricamento dati quiz...",
+    "noContent": "Nessun contenuto quiz rilevato. Verifica che Beook sia installato e che il database decrittato contenga dati di domande e risposte. Assicurati di fermare l'applicazione Beook.",
+    "noQuestions": "Nessuna domanda trovata per questo libro.",
+    "product": "Prodotto",
+    "ref": "Rif",
+    "questionTextUnavailable": "(Testo domanda non disponibile)",
+    "noAnswerChoices": "Nessuna scelta di risposta trovata.",
+    "feedback": {
+      "correct": "Corretto!",
+      "correctNotSelected": "Corretto (non selezionato)",
+      "wrong": "Sbagliato!"
+    },
+    "materialRelevant": "Questo materiale è rilevante per la domanda {{questions}}."
+  },
+  "myQuiz": {
+    "title": "Il mio Quiz"
+  },
+  "addQuizForm": {
+    "title": "Aggiungi quiz personalizzato",
+    "assign": "Assegnazione",
+    "bookLabel": "Libro",
+    "chapterLabel": "Capitolo",
+    "loadingBooks": "Caricamento libri...",
+    "selectBook": "Seleziona un libro (opzionale)",
+    "selectBookFirst": "Seleziona prima un libro",
+    "loadingChapters": "Caricamento capitoli...",
+    "selectChapter": "Seleziona un capitolo (opzionale)",
+    "assignHint": "L'assegnazione di un libro è opzionale. Se scegli \"Nessuno\", la domanda non sarà collegata.",
+    "questionLabel": "Domanda",
+    "correctAnswerLabel": "Risposta corretta",
+    "wrongAnswersLabel": "Risposte sbagliate",
+    "wrongAnswersHint": "Sono richieste almeno 3 risposte sbagliate, fino a 30.",
+    "wrongAnswerPlaceholder": "Risposta sbagliata {{number}}",
+    "addWrongAnswer": "Aggiungi risposta sbagliata aggiuntiva",
+    "imageLabel": "Immagine",
+    "imageHint": "Clicca per scegliere un'immagine (opzionale)",
+    "selectedFile": "Selezionato",
+    "saving": "Salvataggio...",
+    "saveQuestion": "Salva domanda",
+    "success": "Domanda aggiunta con successo!",
+    "errorPrefix": "Errore",
+    "unexpectedError": "Errore imprevisto durante il salvataggio della domanda.",
+    "minWrongAnswers": "Fornisci almeno 3 risposte sbagliate.",
+    "maxWrongAnswers": "Troppe risposte sbagliate (max 30).",
+    "couldNotLoadBooks": "Impossibile caricare i libri.",
+    "couldNotLoadChapters": "Impossibile caricare i capitoli.",
+    "onlyImages": "Al momento sono supportati solo file immagine."
+  },
+  "questionsPanel": {
+    "search": "Cerca",
+    "filterPlaceholder": "Filtra per testo…",
+    "allBooks": "Tutti i libri",
+    "bookNone": "Libro: Nessuno",
+    "allChapters": "Tutti i capitoli",
+    "chapterNone": "Capitolo: Nessuno",
+    "newestFirst": "Più recenti prima",
+    "oldestFirst": "Più vecchi prima",
+    "noQuestionsYet": "Nessuna domanda ancora. Aggiungi la prima a sinistra.",
+    "noResults": "Nessun risultato per il tuo filtro.",
+    "deleteButton": "Elimina",
+    "deleteTitle": "Eliminare questa domanda?",
+    "deleteWarning": "Questa azione non può essere annullata.",
+    "questionRemoved": "Domanda rimossa",
+    "couldNotDelete": "Impossibile eliminare la domanda"
+  },
   "settings": {
     "theme": "Tema",
     "language": "Lingua",
